# netbox-plugin-prometheus-http-sd

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml
example/: prometheus.yml
netbox_prometheus_http_sd/api/: views.py
netbox_prometheus_sd/: __init__.py
