[project]
name = "netbox-prometheus-sd"
version = "0.1.0"
description = "A Netbox plugin to export targets for Prometheus HTTP service discovery"
readme = "README.md"
keywords = ["netbox", "prometheus"]
authors = [{ name = "Artem Tuchinsky", email = "tuchinsky@gmail.com" }]
license = "Apache-2.0"
requires-python = ">=3.8"
dependencies = []
